Shenandoah: global statistics should not accept bogus samples

XMLWordPrintable

    • gc
    • b22

        Seems to be another regression since JDK-8239786: the global data would be added from cycle data, even if cycle data counters are zero. It was masked by global data printout filtering when counters are zero, but it is not actually correct: once at least one event happens (e.g. stray degen gc), we would see lots of zero samples. It would appear degen gc had been running with 0ns on every cycle.

              Assignee:
              Aleksey Shipilev
              Reporter:
              Aleksey Shipilev
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

                Created:
                Updated:
                Resolved: