8244326: Shenandoah: global statistics should not accept bogus samples

Reviewed-by: rkennke