src/hotspot/share/gc/shenandoah/shenandoahPhaseTimings.hpp
@@ -195,6 +195,7 @@ private:
   Phase worker_par_phase(Phase phase, ParPhase par_phase);
 
   void set_cycle_data(Phase phase, double time);
+  static double uninitialized() { return -1; }
 
 public:
   ShenandoahPhaseTimings(uint _max_workers);
